
syntax = "proto3";

package me.viluon.le;

service LeaderElectionService {
  rpc Probe(ProbeMessage) returns (ProbeResponse) {}
  rpc NotifyElected(NotifyMessage) returns (NotifyResponse) {}
}

message ProbeMessage {
  uint64 sender_id = 1;
  bool headed_left = 2;
}

message ProbeResponse {}

message NotifyMessage {
  uint64 leader_id = 1;
  bool headed_left = 2;
}

message NotifyResponse {}
